@@ -15,3 +15,5 @@ ucspi-tcp (@version@-@release@) unstable; urgency=low
   * indimail-mta, ucspi-tcp: fixed uninstall target
   * installer.c: fixed setting of symbolic links
   * ucspi-tcp/ip6_fmt.c: Fixed bug - Erwin Hoffman
+  * tcpserver.c: changed scope of global variables to static, limited to tcpserver.c
+  * tcpserver.c: added -a option to specify CA file
